# photo_organizer

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
macOS/Photo Organizer.app/Contents/: Info.plist
macOS/Photo Organizer.app/Contents/MacOS/: PhotoOrganizer
macOS/Photo Organizer.app/Contents/Resources/: AppIcon.icns  common.sh
scripts/: Photo Organizer Picker.command  Photo Organizer.command  generate_app_icon.py
src/photo_organizer/: __init__.py  __main__.py  cli.py  duplicates.py  filecopy.py  metadata.py  organize.py  review_app.py  screenshots.py  serve_app.py
src/photo_organizer/review_static/: dashboard.css  dashboard.html  dashboard.js  index.html  review.css  review.js  screenshots.html  screenshots.js
tests/: test_duplicates.py  test_metadata_video_dates.py  test_review_app.py
